default/objects/NVMContactWorld__InteractionEvent__c/NVMContactWorld__InteractionEvent__c.object-meta.xml
<CustomObject>
    <label>Interaction Event</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>