default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__AdditionalFieldValues__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__AdditionalFieldValues__c</fullName>
    <label>Additional Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>