default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__Agent__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interaction_Events</relationshipName>
    <type>Lookup</type>
</CustomField>