default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__CallObjectIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallObjectIdentifier__c</fullName>
    <label>CallObjectIdentifier</label>
    <length>128</length>
    <type>Text</type>
</CustomField>