default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CustomerNumber__c</fullName>
    <label>Customer Number</label>
    <type>Phone</type>
</CustomField>