default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__CustomObjectId__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CustomObjectId__c</fullName>
    <label>Custom Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>