default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__DispositionCode__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__DispositionCode__c</fullName>
    <label>Disposition code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>