default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__IndexedCallObjectIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__IndexedCallObjectIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>IndexedCallObjectIdentifier</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>