default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__InitialSearchResults__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__InitialSearchResults__c</fullName>
    <label>Initial Search Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>