default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__IsPreCallEvent__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__IsPreCallEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this event was created before the call actually started, and it indicates that the call should be related to the object indicated in the &quot;relatedTo&quot; field</description>
    <label>Is Pre Call Event</label>
    <type>Checkbox</type>
</CustomField>