default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__RelatedTask__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__RelatedTask__c</fullName>
    <description>Related task</description>
    <externalId>true</externalId>
    <label>Related Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>