default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__RelatedTo__c</fullName>
    <label>Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>