default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__TimeStamp__c</fullName>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>