default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__Type__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>