default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__What__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__What__c</fullName>
    <description>Other object types</description>
    <externalId>true</externalId>
    <label>What</label>
    <length>18</length>
    <type>Text</type>
</CustomField>