default/objects/NVMContactWorld__InteractionEvent__c/fields/NVMContactWorld__Who__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Who__c</fullName>
    <description>Contacts or Leads</description>
    <externalId>true</externalId>
    <label>Who</label>
    <length>18</length>
    <type>Text</type>
</CustomField>