default/objects/NVMContactWorld__InteractionEvent__c/validationRules/NVMContactWorld__Call_Object_Identifier_Deprecated.validationRule-meta.xml
<ValidationRule>
    <fullName>NVMContactWorld__Call_Object_Identifier_Deprecated</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(NVMContactWorld__CallObjectIdentifier__c)</errorConditionFormula>
    <errorMessage>CallObjectIdentifier field is no longer used. Use IndexedCallObjectIdentifier.</errorMessage>
</ValidationRule>