default/objects/NVMContactWorld__InteractionEvent__c/validationRules/NVMContactWorld__Event_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NVMContactWorld__Event_Type_Validation</fullName>
    <active>true</active>
    <description>Event Type must be one of 3 valid Types</description>
    <errorConditionFormula>!ISPICKVAL(NVMContactWorld__Type__c, &#39;Deliver&#39;) &amp;&amp; !ISPICKVAL(NVMContactWorld__Type__c, &#39;Transfer&#39;) &amp;&amp; !ISPICKVAL(NVMContactWorld__Type__c, &#39;Consult&#39;)</errorConditionFormula>
    <errorMessage>Event type must be either &#39;Deliver&#39;, &#39;Transfer&#39; or &#39;Consult&#39;</errorMessage>
</ValidationRule>