default/objects/NVMContactWorld__InteractionEvent__c/validationRules/NVMContactWorld__RelatedTo_Field_Is_Deprecated.validationRule-meta.xml
<ValidationRule>
    <fullName>NVMContactWorld__RelatedTo_Field_Is_Deprecated</fullName>
    <active>true</active>
    <description>The RelatedTo field has been replaced by the Who and What fields.</description>
    <errorConditionFormula>!ISBLANK(NVMContactWorld__RelatedTo__c)</errorConditionFormula>
    <errorMessage>The RelatedTo field is deprecated and has been replaced by the Who and What.</errorMessage>
</ValidationRule>